more assets, updated hyprland.conf, new hyplock,config, swaync configs

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,7 +45,10 @@ $browser = firefox
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
- 
+
+
+exec-once = hyprlock
+exec-once = swaync 
 exec-once = hyprpaper 
 exec-once = waybar
 exec-once = flatpak run com.valvesoftware.Steam
@@ -250,10 +253,20 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 
+
+# Lock screen (using hyprlock)
+bind = $mainMod, L, exec, hyprlock
+
+
 #Screenshot Area
 bind = ALT, S, exec, grim -g "$(slurp)" ~/Pictures/$(date +'%Y-%m-%d_%H-%M-%S').png
 #Screenshot Fullscreen
 bind = ALT, A, exec, grim ~/Pictures/$(date +'%Y-%m-%d_%H-%M-%S').png
+
+
+#Notification center Swaync
+bind = $mainMod, N, exec, swaync-client -t -sw
+
 
 #Asian baddie because why not <3
 bind = $mainMod,backslash,exec,kitty -e bash -c "cat /home/fiw/ACSII/asian.txt; read -n1 -r -p 'Press any key to exit...'"
