more wallpaper, hypr config changes, waybar config changes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,17 +27,15 @@ monitor=eDP-1,1920x1080@60,0x0,1
 
 ###################
 ### MY PROGRAMS ###
-###################
+##################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nnn
+$fileManager = kitty ranger
 $menu = rofi -show drun
 $browser = firefox
-
-
 
 #################
 ### AUTOSTART ###
@@ -46,6 +44,9 @@ $browser = firefox
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+#cursor shit that din't wrok because I'm stupid 
+#exec-once = gsettings set org.gnome.desktop.interface cursor-theme BreezeX-RosePine-Linux
+#exec-once = gsettings set org.gnome.desktop.interface cursor-size 28
 
 exec-once = hyprlock
 exec-once = swaync 
@@ -62,6 +63,11 @@ exec-once = flatpak run com.discordapp.Discord
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+
+#same cursor shit that dosen't work
+#env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+#env = HYPRCURSOR_SIZE,28
 
 
 ###################
@@ -114,8 +120,8 @@ decoration {
 
 
  # Change transparency of focused and unfocused windows
-    active_opacity = 0.95
-    inactive_opacity = 0.8
+    active_opacity = 1
+    inactive_opacity = 0.9
 
     shadow {
         enabled = true
@@ -254,22 +260,22 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 
 
+#taskmanager htop or gtop (I prefer htop)
+bind = $mainMod, T, exec, kitty htop
+
 # Lock screen (using hyprlock)
 bind = $mainMod, L, exec, hyprlock
-
 
 #Screenshot Area
 bind = ALT, S, exec, grim -g "$(slurp)" ~/Pictures/$(date +'%Y-%m-%d_%H-%M-%S').png
 #Screenshot Fullscreen
 bind = ALT, A, exec, grim ~/Pictures/$(date +'%Y-%m-%d_%H-%M-%S').png
 
-
 #Notification center Swaync
 bind = $mainMod, N, exec, swaync-client -t -sw
 
-
 #Asian baddie because why not <3
-bind = $mainMod,backslash,exec,kitty -e bash -c "cat /home/fiw/ACSII/asian.txt; read -n1 -r -p 'Press any key to exit...'"
+bind = $mainMod,backslash,exec,kitty -e bash -c "cat /home/fiw/ACSII/asian.txt; read"
 
 
 # Move focus with mainMod + arrow keys
