--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/fiw/wallpapers/wallpaper.png
-wallpaper = eDP-1, /home/fiw/wallpapers/wallpaper.png
+preload = /home/fiw/wallpapers/wallpaper.jpg
+wallpaper = eDP-1, /home/fiw/wallpapers/wallpaper.jpg
